Fixed display css for the listing components and improved word wrap site wide

--- a/frontend/src/components/EventDetailsPage/EventDetailsPage.css
+++ b/frontend/src/components/EventDetailsPage/EventDetailsPage.css
@@ -8,7 +8,8 @@
     align-items: flex-start;
     position: relative;
     left: 10px;
-    margin: 4% 0% 2%;
+    margin: 4% 2% 2%;
+    word-wrap: break-word;
 }
 
 #events-heading > * {
@@ -79,4 +80,8 @@
     background-color: darkgrey;
     border-radius: 5px;
     box-shadow: 2px 2px 2px grey;
+}
+
+.event-details-page-description {
+    word-wrap: break-word;
 }
